--- a/app/src/main/res/layout/activity_homeactivity.xml
+++ b/app/src/main/res/layout/activity_homeactivity.xml
@@ -14,7 +14,7 @@
         android:textColor="@color/white"
         android:textSize="35dp"
         android:textStyle="bold"
-        android:layout_margin="50dp"
+        android:layout_margin="25dp"
         android:gravity="center"
 
         />
@@ -24,12 +24,13 @@
         android:id="@+id/email"
         android:layout_below="@+id/signup"
         android:background="#30ffffff"
-        android:hint="  Enter Email"
+        android:hint="Enter Email"
         android:textColorHint="@color/white"
         android:textColor="@color/white"
         android:layout_margin="10dp"
         android:padding="20dp"
         android:textSize="20dp"
+        android:drawablePadding="10dp"
         android:drawableLeft="@drawable/ic_baseline_email_24"
         />
     <EditText
@@ -37,7 +38,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/password"
         android:layout_below="@+id/email"
-        android:hint="  Enter password"
+        android:hint="Enter password"
         android:background="#30ffffff"
         android:textColorHint="@color/white"
         android:textColor="@color/white"
@@ -45,6 +46,7 @@
         android:padding="20dp"
         android:textSize="20dp"
         android:inputType="textPassword"
+        android:drawablePadding="10dp"
         android:drawableLeft="@drawable/ic_baseline_lock_24"
         />
     <EditText
@@ -53,12 +55,14 @@
         android:id="@+id/mobile"
         android:background="#30ffffff"
         android:layout_below="@+id/password"
-        android:hint="  Enter Mobile Number"
+        android:hint="Enter Mobile Number"
         android:textColorHint="@color/white"
         android:textColor="@color/white"
         android:layout_margin="10dp"
         android:padding="20dp"
         android:textSize="20dp"
+        android:inputType="phone"
+        android:drawablePadding="10dp"
         android:drawableLeft="@drawable/ic_baseline_phone_24"
         />
     <EditText
@@ -66,7 +70,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/user_name"
         android:layout_below="@+id/select"
-        android:hint="  Enter User Name"
+        android:hint="Enter User Name"
         android:background="#30ffffff"
         android:textColorHint="@color/white"
         android:textColor="@color/white"
@@ -74,19 +78,21 @@
         android:padding="20dp"
         android:textSize="20dp"
         android:drawableLeft="@drawable/ic_baseline_account_circle_24"
+        android:drawablePadding="10dp"
         />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/age"
         android:layout_below="@+id/user_name"
-        android:hint="  Enter age"
+        android:hint="Enter age"
         android:background="#30ffffff"
         android:textColorHint="@color/white"
         android:textColor="@color/white"
         android:layout_margin="10dp"
         android:padding="20dp"
         android:textSize="20dp"
+        android:drawablePadding="10dp"
         android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
         />
     <Spinner
@@ -115,7 +121,6 @@
         android:text="Submit"
         android:layout_below="@+id/age"
         android:textColor="@color/white"
-
         android:textSize="20dp" />
 
     <LinearLayout
