--- a/app/src/main/res/layout/activity_homeactivity.xml
+++ b/app/src/main/res/layout/activity_homeactivity.xml
@@ -36,7 +36,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/password"
+        android:id="@+id/pass"
         android:layout_below="@+id/email"
         android:hint="Enter password"
         android:background="#30ffffff"
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/mobile"
         android:background="#30ffffff"
-        android:layout_below="@+id/password"
+        android:layout_below="@+id/pass"
         android:hint="Enter Mobile Number"
         android:textColorHint="@color/white"
         android:textColor="@color/white"
@@ -114,7 +114,7 @@
         />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/regbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="140dp"
@@ -126,7 +126,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button"
+        android:layout_below="@+id/regbtn"
 
         android:layout_marginStart="75dp"
         android:layout_marginLeft="75dp"
