--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -53,7 +53,7 @@
     </RadioGroup>
 
     <EditText
-        android:id="@+id/sign_in_email"
+        android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/role"
@@ -69,10 +69,10 @@
         android:textSize="20dp" />
 
     <EditText
-        android:id="@+id/sign_in_password"
+        android:id="@+id/pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/sign_in_email"
+        android:layout_below="@+id/email"
         android:layout_marginTop="34dp"
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
@@ -89,7 +89,7 @@
         android:id="@+id/sign_in_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/sign_in_password"
+        android:layout_below="@+id/pass"
         android:layout_marginLeft="140dp"
         android:layout_marginTop="42dp"
         android:text="Sigin in"
