--- a/app/src/main/res/layout/activity_homeactivity.xml
+++ b/app/src/main/res/layout/activity_homeactivity.xml
@@ -15,6 +15,7 @@
         android:textSize="35dp"
         android:textStyle="bold"
         android:layout_margin="25dp"
+        android:background="@drawable/custom_input"
         android:gravity="center"
 
         />
@@ -30,6 +31,7 @@
         android:layout_margin="10dp"
         android:padding="20dp"
         android:textSize="20dp"
+
         android:drawablePadding="10dp"
         android:drawableLeft="@drawable/ic_baseline_email_24"
         />
@@ -121,7 +123,8 @@
         android:text="Submit"
         android:layout_below="@+id/age"
         android:textColor="@color/white"
-        android:textSize="20dp" />
+        android:textSize="20dp"
+        />
 
     <LinearLayout
         android:layout_width="wrap_content"
