--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -62,6 +62,7 @@
         android:background="#30ffffff"
         android:drawableLeft="@drawable/ic_baseline_email_24"
         android:drawablePadding="10dp"
+        android:layout_margin="20dp"
         android:hint="Enter Email"
         android:padding="20dp"
         android:textColor="@color/white"
@@ -79,6 +80,7 @@
         android:drawableLeft="@drawable/ic_baseline_lock_24"
         android:drawablePadding="10dp"
         android:hint="Enter password"
+        android:layout_margin="20dp"
         android:inputType="textPassword"
         android:padding="20dp"
         android:textColor="@color/white"
